// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> location === "/" to match snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light border border-top-0 border-right-0 border-left-0"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      [\`/\`]
    </a>
    <button
      aria-controls="navbar"
      aria-expanded="false"
      aria-label="Toggle navigation"
      className="navbar-toggler"
      data-target="#navbar"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navbar"
    >
      <ul
        className="navbar-nav mr-auto"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="true"
            className="nav-link text-light active"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Home
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            aria-current={false}
            className="nav-link text-light"
            href="/blog"
            onClick={[Function]}
            style={undefined}
          >
            Blog
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <div
    className="container-fluid bg-light"
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <h2>
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m20 5s-10.3 8.9-16.1 13.7c-0.3 0.3-0.6 0.8-0.6 1.3 0 0.9 0.8 1.7 1.7 1.7h3.3v11.6c0 1 0.8 1.7 1.7 1.7h5c0.9 0 1.7-0.7 1.7-1.7v-6.6h6.6v6.6c0 1 0.8 1.7 1.7 1.7h5c0.9 0 1.7-0.7 1.7-1.7v-11.6h3.3c0.9 0 1.7-0.8 1.7-1.7 0-0.5-0.3-1-0.7-1.3-5.7-4.8-16-13.7-16-13.7z"
                />
              </g>
            </svg>
             
            <span
              className="align-middle"
            >
              Home
            </span>
          </h2>
        </div>
      </div>
      <div
        className="row loading"
      />
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div
            className="progress"
            style={
              Object {
                "height": "4px",
              }
            }
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow={50}
              className="progress-bar w-50"
              role="progressbar"
            />
          </div>
        </div>
      </div>
      <div
        className="row"
      />
    </div>
  </div>,
  <footer
    className="border border-right-0 border-bottom-0 border-left-0 pt-3 pb-3"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
             v
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://buttercms.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by ButterCMS
            </a>
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://newsapi.org/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by News API
            </a>
          </small>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`<App /> location === "/blog" to match snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light border border-top-0 border-right-0 border-left-0"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      [\`/\`]
    </a>
    <button
      aria-controls="navbar"
      aria-expanded="false"
      aria-label="Toggle navigation"
      className="navbar-toggler"
      data-target="#navbar"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navbar"
    >
      <ul
        className="navbar-nav mr-auto"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="true"
            className="nav-link text-light active"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Home
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            aria-current="true"
            className="nav-link text-light active"
            href="/blog"
            onClick={[Function]}
            style={Object {}}
          >
            Blog
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <div
    className="container-fluid bg-light"
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <h2>
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": undefined,
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m35 11.5l-6.5-6.5c-0.5-0.5-1.1-0.7-1.7-0.7-0.7 0-1.3 0.2-1.8 0.7l-18.2 18.2c-0.5 0.5-1 1.2-1.3 2-0.3 0.8-0.5 1.6-0.5 2.3v7.5h7.5c0.7 0 1.5-0.2 2.3-0.5s1.5-0.8 2-1.3l18.2-18.2c0.5-0.5 0.7-1.1 0.7-1.8 0-0.6-0.2-1.2-0.7-1.7z m-25.4 13.6l13.8-13.8 2.1 2-13.8 13.9-2.1-2.1z m2.9 6.6h-2.5l-1.7-1.7v-2.5c0-0.1 0.1-0.5 0.3-1 0 0 4.9 4.9 4.9 4.9-0.5 0.2-0.9 0.3-1 0.3z m2.4-1.3l-2.1-2.1 13.9-13.8 2 2.1-13.8 13.8z m15-15l-5.3-5.3 2.2-2.2 5.2 5.3-2.1 2.2z"
              />
            </g>
          </svg>
           
          <span
            className="align-middle"
          >
            Blog
          </span>
        </h2>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div
          className="progress"
          style={
            Object {
              "height": "4px",
            }
          }
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow={50}
            className="progress-bar w-50"
            role="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      className="row pt-0 pb-4"
    >
      <div
        className="col-12"
      >
        <div
          className="card"
        >
          <img
            alt=""
            className="card-img-top"
            src={undefined}
          />
          <div
            className="card-body"
          >
            <h3
              className="card-title"
            >
              <a
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                href=""
                rel="noopener noreferrer"
                target="_self"
              />
            </h3>
            <p
              className="card-text"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <footer
    className="border border-right-0 border-bottom-0 border-left-0 pt-3 pb-3"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
             v
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://buttercms.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by ButterCMS
            </a>
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://newsapi.org/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by News API
            </a>
          </small>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`<App /> location === "/entertainment/buzzfeed" to match snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light border border-top-0 border-right-0 border-left-0"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      [\`/\`]
    </a>
    <button
      aria-controls="navbar"
      aria-expanded="false"
      aria-label="Toggle navigation"
      className="navbar-toggler"
      data-target="#navbar"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navbar"
    >
      <ul
        className="navbar-nav mr-auto"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="true"
            className="nav-link text-light active"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Home
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            aria-current={false}
            className="nav-link text-light"
            href="/blog"
            onClick={[Function]}
            style={undefined}
          >
            Blog
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <div
    className="container-fluid bg-light"
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <h2>
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m35 6.7h-30c-1.8 0-3.3 1.5-3.3 3.3v20c0 1.8 1.5 3.3 3.3 3.3h30c1.8 0 3.3-1.5 3.3-3.3v-20c0-1.8-1.5-3.3-3.3-3.3z m-30 3.3h13.3v20h-13.3v-20z m30 20h-15v-20h15l0 20z m-1.7-7.5c0-0.5-0.3-0.8-0.8-0.8h-1.7c-0.4 0-0.8 0.3-0.8 0.8v5c0 0.5 0.4 0.8 0.8 0.8h1.7c0.5 0 0.8-0.3 0.8-0.8v-5z m-5-10c0-0.5-0.3-0.8-0.8-0.8h-5c-0.5 0-0.8 0.3-0.8 0.8v8.3c0 0.5 0.3 0.9 0.8 0.9h5c0.5 0 0.8-0.4 0.8-0.9v-8.3z m2.5 4.2h1.7c0.5 0 0.8-0.4 0.8-0.9s-0.3-0.8-0.8-0.8h-1.7c-0.4 0-0.8 0.4-0.8 0.8s0.4 0.9 0.8 0.9z m0 3.3h1.7c0.5 0 0.8-0.4 0.8-0.8s-0.3-0.9-0.8-0.9h-1.7c-0.4 0-0.8 0.4-0.8 0.9s0.4 0.8 0.8 0.8z m-8.3 5h5c0.5 0 0.8-0.4 0.8-0.8s-0.3-0.9-0.8-0.9h-5c-0.5 0-0.8 0.4-0.8 0.9s0.3 0.8 0.8 0.8z m5 1.7h-5c-0.5 0-0.8 0.3-0.8 0.8s0.3 0.8 0.8 0.8h5c0.5 0 0.8-0.3 0.8-0.8s-0.3-0.8-0.8-0.8z m3.3-13.4h1.7c0.5 0 0.8-0.3 0.8-0.8s-0.3-0.8-0.8-0.8h-1.7c-0.4 0-0.8 0.3-0.8 0.8s0.4 0.8 0.8 0.8z m-14.1-0.8c0-0.5-0.4-0.8-0.9-0.8h-8.3c-0.5 0-0.8 0.3-0.8 0.8v5c0 0.5 0.3 0.8 0.8 0.8h8.3c0.5 0 0.9-0.3 0.9-0.8v-5z m-0.9 10.8h-8.3c-0.5 0-0.8 0.4-0.8 0.9s0.3 0.8 0.8 0.8h8.3c0.5 0 0.9-0.4 0.9-0.8s-0.4-0.9-0.9-0.9z m0-3.3h-8.3c-0.5 0-0.8 0.4-0.8 0.8s0.3 0.9 0.8 0.9h8.3c0.5 0 0.9-0.4 0.9-0.9s-0.4-0.8-0.9-0.8z m0 6.7h-8.3c-0.5 0-0.8 0.3-0.8 0.8s0.3 0.8 0.8 0.8h8.3c0.5 0 0.9-0.3 0.9-0.8s-0.4-0.8-0.9-0.8z"
                />
              </g>
            </svg>
             
            <span
              className="align-middle"
            >
              Entertainment
            </span>
          </h2>
        </div>
      </div>
      <div
        className="row pb-3"
      >
        <div
          className="col-12"
        >
          <ul
            className="nav nav-pills"
          >
            <li
              className="nav-item"
            >
              <a
                aria-current="true"
                className="nav-link active"
                href="/entertainment/buzzfeed"
                onClick={[Function]}
                style={Object {}}
              >
                Buzzfeed
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div
          className="progress"
          style={
            Object {
              "height": "4px",
            }
          }
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow={50}
            className="progress-bar w-50"
            role="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12"
      />
    </div>
  </div>,
  <footer
    className="border border-right-0 border-bottom-0 border-left-0 pt-3 pb-3"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
             v
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://buttercms.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by ButterCMS
            </a>
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://newsapi.org/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by News API
            </a>
          </small>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`<App /> location === "/for-sale" to match snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light border border-top-0 border-right-0 border-left-0"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      [\`/\`]
    </a>
    <button
      aria-controls="navbar"
      aria-expanded="false"
      aria-label="Toggle navigation"
      className="navbar-toggler"
      data-target="#navbar"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navbar"
    >
      <ul
        className="navbar-nav mr-auto"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="true"
            className="nav-link text-light active"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Home
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            aria-current={false}
            className="nav-link text-light"
            href="/blog"
            onClick={[Function]}
            style={undefined}
          >
            Blog
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <div
    className="container-fluid bg-light"
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <h2>
            For Sale
          </h2>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-4 col-sm-6 mb-4"
        >
          <div
            className="card"
          >
            <img
              alt=""
              className="card-img-top"
              src="/images/IMG_0235.JPG"
            />
            <div
              className="card-body"
            >
              <h3
                className="card-title"
              >
                Garmin
              </h3>
              <h4>
                Forerunner 235
              </h4>
              <p
                className="card-text"
              >
                01 JAN 2017
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <footer
    className="border border-right-0 border-bottom-0 border-left-0 pt-3 pb-3"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
             v
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://buttercms.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by ButterCMS
            </a>
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://newsapi.org/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by News API
            </a>
          </small>
        </div>
      </div>
    </div>
  </footer>,
]
`;
